deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: docusaurus
    app.kubernetes.io/instance: poc
  name: docusaurus
  namespace: docusaurus
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: docusaurus
      app.kubernetes.io/instance: poc
  template:
    metadata:
      labels:
        app.kubernetes.io/name: docusaurus
        app.kubernetes.io/instance: poc
    spec:
      containers:
      - image: registry.civo.com/documentation/docusaurus-poc:37431
        name: docusaurus
        livenessProbe:
          httpGet:
            path: /index.html
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 3
        resources:
          limits:
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 64Mi
      imagePullSecrets:
      - name: gitlab-regcred
