deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app.kubernetes.io/name: docusaurus
    app.kubernetes.io/instance: poc
  name: docusaurus
  namespace: docusaurus
spec:
  ingressClassName: nginx
  rules:
  - host: 3439bd42-d622-41f7-8c82-85b142d2a30d.lb.civo.com
    http:
      paths:
      - backend:
          service:
            name: docusaurus
            port:
              name: web
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - 3439bd42-d622-41f7-8c82-85b142d2a30d.lb.civo.com
    secretName: docusaurus-cert
